hphp/test/slow/traits/conflicts/static_mismatch.php.expectf
Fatal error: Redeclaration of trait method 'T::b' is inconsistent about 'static' in %s/static_mismatch.php on line 8
